test/corpus/goto_instructions.txt
================
goto instruction
================

Puzzles
A: 3x3

1 | U2 F'
2 | goto 1

---

(source_file
  (puzzle_definition
    (puzzle_name)
    (puzzle_type))
  (instruction
    (algorithm
      (move)
      (move)))
  (instruction
    (goto_instruction)))
