test/corpus/halt_instruction.txt
================
halt instruction
================

Puzzles
A: 3x3

1 | U2 F'
2 | halt until FR UFR solved
         "(X * Y) mod 30 ="
         U L U' D' F' L U F D F' L U' F2 L2

---

(source_file
  (puzzle_definition
    name: (puzzle_name)
    type: (puzzle_type))
  (instruction
    (algorithm
      (move)
      (move)))
  (instruction
    (halt_instruction
      positions: (positions
        (position)
        (position))
      message: (string)
      algorithm: (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)))))

===============================
halt instruction with no output
===============================

Puzzles
A: 3x3

1 | U2 F'
2 | halt "message"

---

(source_file
  (puzzle_definition
    name: (puzzle_name)
    type: (puzzle_type))
  (instruction
    (algorithm
      (move)
      (move)))
  (instruction
    (halt_instruction
      message: (string))))
