test/corpus/input_instructions.txt
=================
input instruction
=================

Puzzles
A: 3x3

1 | input "Enter number X"
          L2 F2 U L' F D' F' U' L' F U D L' U'
          max-input 29

---

(source_file
  (puzzle_definition
    (puzzle_name)
    (puzzle_type))
  (instruction
    (input_instruction
      (string)
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)))))
