test/corpus/multiply.txt
==========
multiply.q
==========

Puzzles
A: 3x3

1 | input "Enter number X"
          L2 F2 U L' F D' F' U' L' F U D L' U'
          max-input 29
2 | input "Enter number Y"
          R2 L U' R' L2 F' D R' D L B2 D2
          max-input 29
3 | solved-goto FR UFR 75
4 | solved-goto UB DLB 77
5 | solved-goto UB 10
6 | F2 B2 U F2 B2 D' B L2 D2 B' D B2 D L D2 B2 D'
7 | solved-goto UB 26
8 | F2 B2 U F2 B2 D' B L2 D2 B' D B2 D L D2 B2 D'
9 | goto 5
10 | repeat until ULF solved
            D B2 D2 L' D' B2 D' B D2
            L2 B' D F2 B2 U' F2 B2
11 | repeat until UR ULF solved
            D' R L' U' F' B2 L B
            U B L U R' D2 B' U'
12 | repeat until UB DLB solved
            F' B' D2 R' B2 R U R2 B2
            L' B' U B R2 L2 F R L'
13 | repeat until ULF solved
            D B2 D2 L' D' B2 D' B D2
            L2 B' D F2 B2 U' F2 B2
14 | repeat until UR ULF solved
            D' R L' U' F' B2 L B
            U B L U R' D2 B' U'
15 | B2 L
16 | repeat until FR UFR solved
            F D R2 F R' U F'
            R2 F D2 L2 D L2
17 | L' B2 D2
18 | repeat until UR solved
            L D' F' D' R D' R U2
            B R B2 U R' U F D'
19 | D2
20 | repeat until UR ULF solved
            F2 L' B' D F2 U' R2 F
            U2 R' D' B U2 F' L2 U
21 | goto 5
22 | repeat until UB DLB solved
            U' R2 L2 U R2 F2 D2 R'
            F2 L' U2 L U L' B D' B
23 | repeat until ULF solved
            D B2 D2 L' D' B2 D' B D2
            L2 B' D F2 B2 U' F2 B2
24 | repeat until UR ULF solved
            D' R L' U' F' B2 L B
            U B L U R' D2 B' U'
25 | repeat until FR UFR solved
            U' R' L2 B' L' D' F' R
            F' D R' L B2 R2 L2 U' R2
26 | D2
27 | repeat until UR solved
            L D' F' D' R D' R U2
            B R B2 U R' U F D'
28 | D2
29 | repeat until UR ULF solved
            F2 L' B' D F2 U' R2 F
            U2 R' D' B U2 F' L2 U
30 | goto 33
31 | repeat until ULF solved
            D B2 D2 L' D' B2 D' B D2
            L2 B' D F2 B2 U' F2 B2
32 | repeat until UR ULF solved
            D' R L' U' F' B2 L B
            U B L U R' D2 B' U'
33 | solved-goto DLB 22
34 | D2 B2 L' D' R D' F R L2 U R2 L'
35 | solved-goto UB DLB 89
36 | goto 39
37 | solved-goto UB 49
38 | D2 B2 L' D' R D' F R L2 U R2 L'
39 | U L2 B' L U' B' U2 R B' R' B L
40 | solved-goto UB 60
41 | F2 B2 U F2 B2 D' B L2 D2 B' D B2 D L D2 B2 D'
42 | solved-goto UB 60
43 | F2 B2 U F2 B2 D' B L2 D2 B' D B2 D L D2 B2 D'
44 | solved-goto UB 60
45 | F2 B2 U F2 B2 D' B L2 D2 B' D B2 D L D2 B2 D'
46 | solved-goto UB 60
47 | F2 B2 U F2 B2 D' B L2 D2 B' D B2 D L D2 B2 D'
48 | goto 37
49 | repeat until ULF solved
            D B2 D2 L' D' B2 D' B D2
            L2 B' D F2 B2 U' F2 B2
50 | repeat until UR ULF solved
            D' R L' U' F' B2 L B
            U B L U R' D2 B' U'
51 | repeat until UB DLB solved
            F2 B2 U F2 D L' B D2 B2
            D L2 D' B R' L2 B2 R L
52 | repeat until ULF solved
            D B2 D2 L' D' B2 D' B D2
            L2 B' D F2 B2 U' F2 B2
53 | repeat until UR ULF solved
            D' R L' U' F' B2 L B
            U B L U R' D2 B' U'
54 | repeat until FR UFR solved
            D2 R' F' D2 R F R F' R'
            B' D F' L' D' B' L2 U' B2
55 | D2
56 | repeat until UR solved
            L D' F' D' R D' R U2
            B R B2 U R' U F D'
57 | D2
58 | repeat until UR ULF solved
            F2 L' B' D F2 U' R2 F
            U2 R' D' B U2 F' L2 U
59 | goto 37
60 | repeat until ULF solved
            D B2 D2 L' D' B2 D' B D2
            L2 B' D F2 B2 U' F2 B2
61 | repeat until UR ULF solved
            D' R L' U' F' B2 L B
            U B L U R' D2 B' U'
62 | D2 B2 L' D' R D' F R L2 U R2 L'
63 | solved-goto UB 75
64 | R2 L U' R' L2 F' D R' D L B2 D2
65 | repeat until UB DLB solved
            F' D' F' U' R B2 U2 D'
            R D F2 L B2 L D2 L2 D2
66 | repeat until ULF solved
            D B2 D2 L' D' B2 D' B D2
            L2 B' D F2 B2 U' F2 B2
67 | repeat until UR ULF solved
            D' R L' U' F' B2 L B
            U B L U R' D2 B' U'
68 | repeat until FR UFR solved
            D2 F U2 R' U D2 F D'
            R D R2 D F' R U R
69 | D2
70 | repeat until UR solved
            L D' F' D' R D' R U2
            B R B2 U R' U F D'
71 | D2
72 | repeat until UR ULF solved
            F2 L' B' D F2 U' R2 F
            U2 R' D' B U2 F' L2 U
73 | goto 62
74 | D2 B2 L' D' R D' F R L2 U R2 L'
75 | solved-goto UB DLB 89
76 | R2 L U' R' L2 F' D R' D L B2 D2
77 | repeat until UB DLB solved
            R' B' R D F L2 U' B2 L2
            B' U L2 U L' U' B2 L2 F'
78 | repeat until ULF solved
            D B2 D2 L' D' B2 D' B D2
            L2 B' D F2 B2 U' F2 B2
79 | repeat until UR ULF solved
            D' R L' U' F' B2 L B
            U B L U R' D2 B' U'
80 | repeat until FR UFR solved
            R' F2 D F' B2 L2 U L2 U
            F' B2 R D2 R' D' F2 D'
81 | D2
82 | repeat until UR solved
            L D' F' D' R D' R U2
            B R B2 U R' U F D'
83 | D2
84 | repeat until UR ULF solved
            F2 L' B' D F2 U' R2 F
            U2 R' D' B U2 F' L2 U
85 | goto 74
86 | repeat until UB DLB solved
            D2 B2 L' D' R D' F R L2 U R2 L'
87 | goto 89
88 | repeat until FR UFR solved
            U L U' D' F' L U F D F' L U' F2 L2
89 | halt until FR UFR solved
          "(X * Y) mod 30 ="
          U L U' D' F' L U F D F' L U' F2 L2

---

(source_file
  (puzzle_definition
    (puzzle_name)
    (puzzle_type))
  (instruction
    (input_instruction
      (string)
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (input_instruction
      (string)
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (solved_goto_instruction
      (positions
        (position)
        (position))))
  (instruction
    (solved_goto_instruction
      (positions
        (position)
        (position))))
  (instruction
    (solved_goto_instruction
      (positions
        (position))))
  (instruction
    (algorithm
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)))
  (instruction
    (solved_goto_instruction
      (positions
        (position))))
  (instruction
    (algorithm
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)))
  (instruction
    (goto_instruction))
  (instruction
    (repeat_until_instruction
      (positions
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (repeat_until_instruction
      (positions
        (position)
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (repeat_until_instruction
      (positions
        (position)
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (repeat_until_instruction
      (positions
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (repeat_until_instruction
      (positions
        (position)
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (algorithm
      (move)
      (move)))
  (instruction
    (repeat_until_instruction
      (positions
        (position)
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (algorithm
      (move)
      (move)
      (move)))
  (instruction
    (repeat_until_instruction
      (positions
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (algorithm
      (move)))
  (instruction
    (repeat_until_instruction
      (positions
        (position)
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (goto_instruction))
  (instruction
    (repeat_until_instruction
      (positions
        (position)
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (repeat_until_instruction
      (positions
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (repeat_until_instruction
      (positions
        (position)
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (repeat_until_instruction
      (positions
        (position)
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (algorithm
      (move)))
  (instruction
    (repeat_until_instruction
      (positions
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (algorithm
      (move)))
  (instruction
    (repeat_until_instruction
      (positions
        (position)
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (goto_instruction))
  (instruction
    (repeat_until_instruction
      (positions
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (repeat_until_instruction
      (positions
        (position)
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (solved_goto_instruction
      (positions
        (position))))
  (instruction
    (algorithm
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)))
  (instruction
    (solved_goto_instruction
      (positions
        (position)
        (position))))
  (instruction
    (goto_instruction))
  (instruction
    (solved_goto_instruction
      (positions
        (position))))
  (instruction
    (algorithm
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)))
  (instruction
    (algorithm
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)))
  (instruction
    (solved_goto_instruction
      (positions
        (position))))
  (instruction
    (algorithm
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)))
  (instruction
    (solved_goto_instruction
      (positions
        (position))))
  (instruction
    (algorithm
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)))
  (instruction
    (solved_goto_instruction
      (positions
        (position))))
  (instruction
    (algorithm
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)))
  (instruction
    (solved_goto_instruction
      (positions
        (position))))
  (instruction
    (algorithm
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)))
  (instruction
    (goto_instruction))
  (instruction
    (repeat_until_instruction
      (positions
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (repeat_until_instruction
      (positions
        (position)
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (repeat_until_instruction
      (positions
        (position)
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (repeat_until_instruction
      (positions
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (repeat_until_instruction
      (positions
        (position)
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (repeat_until_instruction
      (positions
        (position)
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (algorithm
      (move)))
  (instruction
    (repeat_until_instruction
      (positions
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (algorithm
      (move)))
  (instruction
    (repeat_until_instruction
      (positions
        (position)
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (goto_instruction))
  (instruction
    (repeat_until_instruction
      (positions
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (repeat_until_instruction
      (positions
        (position)
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (algorithm
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)))
  (instruction
    (solved_goto_instruction
      (positions
        (position))))
  (instruction
    (algorithm
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)))
  (instruction
    (repeat_until_instruction
      (positions
        (position)
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (repeat_until_instruction
      (positions
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (repeat_until_instruction
      (positions
        (position)
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (repeat_until_instruction
      (positions
        (position)
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (algorithm
      (move)))
  (instruction
    (repeat_until_instruction
      (positions
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (algorithm
      (move)))
  (instruction
    (repeat_until_instruction
      (positions
        (position)
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (goto_instruction))
  (instruction
    (algorithm
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)))
  (instruction
    (solved_goto_instruction
      (positions
        (position)
        (position))))
  (instruction
    (algorithm
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)
      (move)))
  (instruction
    (repeat_until_instruction
      (positions
        (position)
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (repeat_until_instruction
      (positions
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (repeat_until_instruction
      (positions
        (position)
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (repeat_until_instruction
      (positions
        (position)
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (algorithm
      (move)))
  (instruction
    (repeat_until_instruction
      (positions
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (algorithm
      (move)))
  (instruction
    (repeat_until_instruction
      (positions
        (position)
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (goto_instruction))
  (instruction
    (repeat_until_instruction
      (positions
        (position)
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (goto_instruction))
  (instruction
    (repeat_until_instruction
      (positions
        (position)
        (position))
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move))))
  (instruction
    (halt_instruction
      (positions
        (position)
        (position))
      (string)
      (algorithm
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)
        (move)))))
