test/corpus/print_instruction.txt
================
print instruction
================

Puzzles
A: 3x3

1 | U2 F'
2 | print "Bye bye"

---

(source_file
	(puzzle_definition)
	(instruction
		(algorithm (move) (move)))
	(instruction
		(print_instruction
		  message: (string))))

============================
print instruction with output
============================

Puzzles
A: 3x3

1 | U2 F'
2 | print "You chose"
    U R U' R'
    counting-until UFR

---

(source_file
	(puzzle_definition)
	(instruction
		(algorithm (move) (move)))
	(instruction
		(print_instruction
		  message: (string)
			algorithm: (algorithm (move) (move) (move) (move))
			positions: (positions (position)))))
