test/corpus/puzzle_definitions.txt
========================
Single puzzle definition
========================

Puzzles
A: 3x3

1 | U

---

(source_file
  (puzzle_definition
    (puzzle_name)
    (puzzle_type))
  (instruction
    (algorithm
      (move))))

===========================
Multiple puzzle definitions
===========================

Puzzles
A: 3x3
Puzzle2: tri9x4

1 | U

---

(source_file
  (puzzle_definition
    (puzzle_name)
    (puzzle_type))
  (puzzle_definition
    (puzzle_name)
    (puzzle_type))
  (instruction
    (algorithm
      (move))))
