test/corpus/solve_instruction.txt
=================
solve instruction
=================

Puzzles
A: 3x3

1 | U2 F'
2 | solve

---

(source_file
  (puzzle_definition
    (puzzle_name)
    (puzzle_type))
  (instruction
    (algorithm
      (move)
      (move)))
  (instruction
    (solve_instruction)))
