test/corpus/solved_goto_instructions.txt
=========================================
solved-goto instruction (single position)
=========================================

Puzzles
A: 3x3

1 | solved-goto FR 10

---

(source_file
  (puzzle_definition
    (puzzle_name)
    (puzzle_type))
  (instruction
    (solved_goto_instruction
      (positions
        (position)))))

===========================================
solved-goto instruction (several positions)
===========================================

Puzzles
A: 3x3

1 | solved-goto FR DFB A654 10

---

(source_file
  (puzzle_definition
    (puzzle_name)
    (puzzle_type))
  (instruction
    (solved_goto_instruction
      (positions
        (position)
        (position)
        (position)))))
