test/corpus/switch_instruction.txt
==================
switch instruction
==================

Puzzles
A: 3x3
B: 3x3

1 | U2 F'
2 | switch B
3 | U2 F'
4 | switch A

---

(source_file
  (puzzle_definition
    (puzzle_name)
    (puzzle_type))
  (puzzle_definition
    (puzzle_name)
    (puzzle_type))
  (instruction
    (algorithm
      (move)
      (move)))
  (instruction
    (switch_instruction
      (puzzle_name)))
  (instruction
    (algorithm
      (move)
      (move)))
  (instruction
    (switch_instruction
      (puzzle_name))))
